--- a/default.config.yml
+++ b/default.config.yml
@@ -5,7 +5,7 @@ configure_nix: false
 configure_python: true
 configure_dotfiles: true
 configure_terminal: true
-configure_osx: true 
+configure_osx: true
 configure_vscode: true
 configure_keys: true
 
@@ -105,9 +105,11 @@ go_packages:
 # - name: webpack
 #   state: present # present/absent/latest, default: present
 #   version: "^2.6" # default: N/A
-pip_packages:
-  - name: yamllint
-  - name: yamlfmt
+pipx_packages:
+  - black
+pip_packages: []
+#  - name: yamllint
+#  - name: yamlfmt
 # - name: mkdocs
 #   state: present # present/absent/latest, default: present
 #   version: "0.16.3" # default: N/A
