--- a/vars/vscode.yml
+++ b/vars/vscode.yml
@@ -40,5 +40,6 @@ vscode_extensions:
   - Boto3typed.boto3-ide
   - golang.go
   - samuelcolvin.jinjahtml
+  - bbenoist.nix
 
 font: Hack Nerd Font Mono
