--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -1,4 +1,15 @@
 ---
+#- debug:
+#    var: vars
+#
+#- name: test sudo
+#  command: whoami
+#  become: true
+#  register: sudo_test
+#
+#- debug:
+#    var: sudo_test
+#
 - name: Check if SSH Key Vault exists
   stat:
     path: "{{ ssh_vault }}"
@@ -6,16 +17,20 @@
 
 - name: Setup SSH Keys
   block:
-  - include_vars:
-      file: "{{ ssh_vault }}"
-  - file: path={{local_home}}/.ssh state=directory mode=0700 owner={{local_user}}
+    - include_vars:
+        file: "{{ ssh_vault }}"
+    - file: path={{local_home}}/.ssh state=directory mode=0700 owner={{local_user}}
 
-  - template: src={{ ssh_templates }}/HOME_.ssh_config dest={{local_home}}/.ssh/config mode=0644 owner={{local_user}} backup=yes
+    - template: src={{ ssh_templates }}/HOME_.ssh_config dest={{local_home}}/.ssh/config mode=0644 owner={{local_user}} backup=yes
 
-  - shell: echo {{ssh_private_key}} |base64 --decode
-    register: ssh_private_key_decoded
+    - shell: echo {{ssh_private_key}} |base64 --decode
+      register: ssh_private_key_decoded
 
-  - template: src={{ ssh_templates }}/HOME_.ssh_gordian-jklapacz-github dest={{local_home}}/.ssh/gordian-jklapacz-github mode=0600 owner={{local_user}}
+    - template: src={{ ssh_templates }}/HOME_.ssh_gordian-jklapacz-github dest={{local_home}}/.ssh/gordian-jklapacz-github mode=0600 owner={{local_user}}
 
-  - template: src={{ ssh_templates }}/HOME_.ssh_gordian-jklapacz-github.pub dest={{local_home}}/.ssh/gordian-jklapacz-github.pub mode=0644 owner={{local_user}}
+    - template: src={{ ssh_templates }}/HOME_.ssh_gordian-jklapacz-github.pub dest={{local_home}}/.ssh/gordian-jklapacz-github.pub mode=0644 owner={{local_user}}
+  rescue:
+    - name: recover
+      debug:
+        msg: "could not decrypt"
   when: vault_st.stat.exists
