--- a/vars/flags.yml
+++ b/vars/flags.yml
@@ -1,12 +1,3 @@
 ---
-configure_sudoers: true
-
-skip_keys: false
-skip_dotfiles: true
-skip_ssh: true
-skip_brew: false
-skip_python: false
-skip_dock: false
-skip_osx: false
-skip_vscode: false
-skip_terminal: true
+configure_dotfiles: true
+configure_ssh: false
