--- a/tasks/osx.yml
+++ b/tasks/osx.yml
@@ -1,5 +1,12 @@
 ---
 # TODO: Use sudo once .osx can be run via root with no user interaction.
+- name: Copy .osx file
+  copy:
+    src: files/.osx
+    dest: "{{ ansible_env.HOME }}/.osx"
+    mode: 0755
+  changed_when: false
+
 - name: Run .osx dotfiles.
   command: "{{ osx_script }}"
   changed_when: false
