--- a/main.yml
+++ b/main.yml
@@ -73,6 +73,9 @@
     - import_tasks: tasks/extra-packages.yml
       tags: ["extra-packages"]
 
+    - import_tasks: tasks/misc.yml
+      tags: ["misc"]
+
     - block:
         - name: Run configured post-provision ansible task files.
           include_tasks: "{{ outer_item }}"
@@ -80,3 +83,4 @@
             loop_var: outer_item
           with_fileglob: "{{ post_provision_tasks|default(omit) }}"
       tags: ["post"]
+
