--- a/vars/homebrew.yml
+++ b/vars/homebrew.yml
@@ -71,6 +71,8 @@ homebrew_installed_packages:
   - atuin
   - lastpass-cli
   - direnv
+  - hashicorp/tap/terraform
+  - kreuzwerker/taps/m1-terraform-provider-helper
 fzf_postinstall: |
   "{{ homebrew_prefix }}/opt/fzf/install"
 
@@ -96,6 +98,7 @@ homebrew_cask_apps:
   - slack
   - visual-studio-code
   - lastpass
+  - gpg-suite
 homebrew_fonts:
   - font-fira-code
   - font-fira-mono
@@ -111,6 +114,7 @@ homebrew_lib:
   - -L{{ homebrew_prefix }}/opt/libpq/lib
   - -L{{ homebrew_prefix }}/opt/libyaml/lib
   - -L{{ homebrew_prefix }}/opt/zlib/lib
+  - -L{{ homebrew_prefix }}/opt/librdkafka/lib
 homebrew_include:
   - -I{{ homebrew_prefix }}/opt/openssl@1.1/include
   - -I{{ homebrew_prefix }}/opt/bzip2/include
@@ -119,6 +123,7 @@ homebrew_include:
   - -I{{ homebrew_prefix }}/opt/libpq/include
   - -I{{ homebrew_prefix }}/opt/libyaml/include
   - -I{{ homebrew_prefix }}/opt/zlib/include
+  - -L{{ homebrew_prefix }}/opt/librdkafka/include
 homebrew_extra_paths:
   - "{{ ansible_env.HOME }}/go/bin"
   - "{{ homebrew_prefix }}/bin"
